--- a/.env
+++ b/.env
@@ -63,3 +63,4 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 SPEEDSMS_API_KEY=KupjXzO6_OPIga7k0SHP-f_mQq6gDnVg
+CACHE_DRIVER=array
