--- a/.env
+++ b/.env
@@ -64,3 +64,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 SPEEDSMS_API_KEY=KupjXzO6_OPIga7k0SHP-f_mQq6gDnVg
 CACHE_DRIVER=array
+
+# CORS_ALLOWED_ORIGINS=http://localhost:3000/
+# CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
+# CORS_ALLOWED_HEADERS=X-Requested-With,Content-Type,X-Token-Auth,Authorization
