chỉnh sửa thời gian trong env

--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:5NUgU48dz1gq3kMrafGeCgPQb4ISaPo0/DoXxvO3WX4=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+# APP_TIMEZONE=UTC 
+APP_TIMEZONE=Asia/Ho_Chi_Minh 
 APP_URL=http://be.test
 
 APP_LOCALE=en
